fix:responsiveheid #73
De header was nog niet lekker responsive met width. Ook als je hem open hield en groter maakte kwam er een grote layout shift.

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -73,12 +73,11 @@ header{
 .main-nav{
     background-color: var(--white);
     height: 100%;
-    width: 55%;
+    width: 65%;
     position: fixed;
     top: 0;
     right: 0;
     z-index: 1000;
-    justify-content: space-between;
     display: none;
 
     .menu-close-link{
@@ -90,6 +89,15 @@ header{
         img{
             padding: 0.5em;
         }
+    }
+    @media (min-width: 450px){
+        width: 45%;
+    }
+    @media (min-width: 650px){
+        width: 40%;
+    }
+    @media (min-width: 800px){
+        width: 35%;
     }
 }
 
@@ -132,12 +140,14 @@ header{
 
 @media (min-width: 1100px) {
 
-    header{
+    header {
+
         border: none;
         justify-content: unset;
     }
     .main-nav {
       display: flex;
+      flex-direction: row;
       align-items: center;
       position: static;
       width: 100%;
@@ -146,11 +156,17 @@ header{
   
     .nav-list {
       display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
       white-space: nowrap;
       gap: 2em;
     }
   
     .nav-actions {
+      margin: 0;
+      margin-left: auto;
+      margin-right: 2em;
       flex-direction: row;
       align-items: center;
       gap: 2em;
@@ -168,7 +184,12 @@ header{
 }
 
 .nav-open #menu{
-    display: block;
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+    @media (min-width: 1100px) {
+        flex-direction: row;
+    }
 }
 
 /* hero homepage */
